testsuite/tests/grammar/invalid_lexers/token_action_6.lkt
from common import Example

lexer foo_lexer {
    @text(comment=false) Example <- "example"
}
